maven
hotfix: add project maven